fixed lengthy paragraphs and letter spacing.

--- a/app/src/styles/main.sass
+++ b/app/src/styles/main.sass
@@ -17,7 +17,7 @@ root
 body
   background-color: $whitesmk
   font-family: Arial, Helvetica, sans-serif
-  letter-spacing: .875px
+  letter-spacing: 1px
 
 main
   display: grid
@@ -28,7 +28,8 @@ h2
   color: $green
   font-family: 'Roboto Slab', serif
   text-transform: capitalize
-
+p
+  width: 75%
 @media (min-width: $screen-lg)
   nav
     left: 0
